# corona-bz-parser

./: README.md  corona-bz-crawler.js  corona-bz-parser.js  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: corona-bz-parser.yml
corona_bz_crawler/: scrapy.cfg
corona_bz_crawler/corona_bz_crawler/: items.py  middlewares.py  pipelines.py  settings.py
data/: 02.11.2022.json  02.12.2022.json  03.11.2022.json  04.11.2022.json  05.11.2022.json  06.11.2022.json  07.11.2022.json  08.11.2022.json  09.11.2022.json  09.12.2022.json  10.11.2022.json  11.11.2022.json  12.10.2022.json  12.11.2022.json  13.10.2022.json  13.11.2022.json  14.10.2022.json  14.11.2022.json  15.10.2022.json  15.11.2022.json  16.10.2022.json  16.11.2022.json  16.12.2022.json  17.10.2022.json  17.11.2022.json  18.10.2022.json  18.11.2022.json  19.10.2022.json  19.11.2022.json  20.10.2022.json  20.11.2022.json  21.10.2022.json  21.11.2022.json  22.10.2022.json  22.11.2022.json  23.10.2022.json  23.11.2022.json  23.12.2022.json  24.10.2022.json  24.11.2022.json  (+12 more)
