[tool.poetry]
name = "corona-bz-crawler"
version = "0.1.0"
description = ""
authors = ["16flotho <tom.florian@hotmail.com>"]
readme = "README.md"
packages = [{include = "corona_bz_crawler"}]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
